LU-18479 nodemap: ncf_obj remains NULL in error path

The nodemap_save_all_caches() function leaves ncf_obj as NULL
if nodemap_save_config_cache() fails. This can lead to a system
panic when ncf_obj is accessed later without proper NULL checks.

HPE-bug-id:LUS-12296
Signed-off-by: Rajeev Mishra <rajeevm@hpe.com>
Change-Id: I63f530e06e9e60679d5d482b4440a74ee304d9ad
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60328
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>